--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="incrementStr">Increment</string>
     <string name="bottomClockStr">BOTTOM CLOCK</string>
     <string name="startStr">Start</string>
+    <string name="gameStr">Game</string>
+    <string name="themeStr">Theme</string>
 
 </resources>
