--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -11,6 +11,8 @@
     // Activity Settings
     <string name="iconStr">Icoon</string>
     <string name="settingsStr">Instellingen</string>
+    <string name="gameStr">Spel</string>
+    <string name="themeStr">Thema</string>
 
     // Fragment Themes
     <string name="switchDarkStr">Schakel dagmodus in</string>
