Removed hard coded strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -30,4 +30,8 @@
     <string name="bottomClockStr">UNTEN UHR</string>
     <string name="startStr">Anfangen</string>
 
+    // Time Picker
+    <string name="setTime">Zeit einstellen</string>
+    <string name="cancel">Stornieren</string>
+
 </resources>
