--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -30,4 +30,8 @@
     <string name="bottomClockStr">底部时钟</string>
     <string name="startStr">开始</string>
 
+    // Time Picker
+    <string name="setTime">建立</string>
+    <string name="cancel">取消</string>
+
 </resources>
